--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,26 +1,24 @@
 spring.application.name=Backend_Dip
-
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.jpa.open-in-view=false
+spring.servlet.multipart.enabled=true
 server.port=8181
 app.admin.username=admin_manager
 app.admin.password=admin_pass
-
 logging.level.org.springframework.security=DEBUG
-
 #file.upload-dir=${FILE_UPLOAD_DIR:C:\Users\User}
-
-#file.upload-dir = C\Users\User
-
+file.upload-dir=C:\\Users\\User
 spring.servlet.multipart.max-file-size=280MB
 spring.servlet.multipart.max-request-size=2800MB
-
 openai.api.key=AIzaSyCJ2lF1PTUU_mS7hcy4Be2Z-mo67Ixc918
 openai.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent?key=
-
+cors.allowed-origins=http://localhost:5000,http://127.0.0.1:5000
+cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+cors.allowed-headers=Authorization,Content-Type
+cors.allow-credentials=true
