--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,12 +8,13 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.open-in-view=false
 spring.servlet.multipart.enabled=true
+spring.data.jdbc.dialect=postgresql
 server.port=8181
 app.admin.username=admin_manager
 app.admin.password=admin_pass
 logging.level.org.springframework.security=DEBUG
-#file.upload-dir=${FILE_UPLOAD_DIR:C:\Users\User}
-file.upload-dir=C:\\Users\\User
+file.upload-dir=/home/user/Backend_Dip/uploads
+
 spring.servlet.multipart.max-file-size=280MB
 spring.servlet.multipart.max-request-size=2800MB
 openai.api.key=AIzaSyCJ2lF1PTUU_mS7hcy4Be2Z-mo67Ixc918
