--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.open-in-view=false
 spring.servlet.multipart.enabled=true
 spring.data.jdbc.dialect=postgresql
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
 server.port=8181
 app.admin.username=admin_manager
 app.admin.password=admin_pass
